--- a/index.html
+++ b/index.html
@@ -157,13 +157,14 @@
         <button><i class="fas fa-search"></i> بحث</button>
     </div>
 
-    <div class="button-container">
-        <a href="first-year.html" class="button"><i class="fas fa-calendar-alt"></i> السنة أولى متوسط</a>
-        <a href="second-year.html" class="button"><i class="fas fa-puzzle-piece"></i> السنة ثانية متوسط</a>
-        <a href="third-year.html" class="button"><i class="fas fa-chalkboard-teacher"></i> السنة ثالثة متوسط</a>
-        <a href="fourth-year.html" class="button"><i class="fas fa-book"></i> السنة رابعة متوسط</a>
-        <a href="teacher-documents.html" class="button"><i class="fas fa-chalkboard"></i> وثائق الأستاذ</a>
-    </div>
+  <div class="button-container">
+    <a href="first-year.html" class="button"><i class="fas fa-calendar-alt"></i> السنة أولى متوسط</a>
+    <a href="second-year.html" class="button"><i class="fas fa-puzzle-piece"></i> السنة ثانية متوسط</a>
+    <a href="third-year.html" class="button"><i class="fas fa-chalkboard-teacher"></i> السنة ثالثة متوسط</a>
+    <a href="fourth-year.html" class="button"><i class="fas fa-book"></i> السنة رابعة متوسط</a>
+    <a href="teacher-documents.html" class="button"><i class="fas fa-chalkboard"></i> وثائق الأستاذ</a>
+    <a href="upload.html" class="button"><i class="fas fa-upload"></i> رفع الملفات</a>
+</div>
 
     <div class="video-section">
         <h2>فيديوهات تفاعلية</h2>
