--- a/index.html
+++ b/index.html
@@ -3,199 +3,139 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الرياضيات السهلة</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>رفع الملفات</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
+            font-family: Arial, sans-serif;
             text-align: center;
             direction: rtl;
         }
-
-        .main-title {
-            background-color: #003366;
-            color: white;
-            padding: 40px 0;
-            font-size: 2.5em;
-            margin-bottom: 30px;
-        }
-
-        .search-bar {
+        .upload-form {
             margin: 20px auto;
             width: 80%;
             max-width: 600px;
         }
-
-        .search-bar input {
-            width: 70%;
-            padding: 10px;
-            border: 2px solid #003366;
-            border-radius: 5px;
-            font-size: 1em;
+        .upload-form input[type="file"] {
+            margin: 10px 0;
         }
-
-        .search-bar button {
-            padding: 10px 20px;
-            background-color: #003366;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1em;
+        .file-list {
+            margin-top: 20px;
         }
-
-        .button-container {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            padding: 20px;
-            justify-items: center;
-        }
-
-        .button {
-            background-color: #ffcc00;
-            color: #003366;
-            padding: 20px 40px;
-            font-size: 1.2em;
-            font-weight: bold;
-            text-decoration: none;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-            border: 2px solid #003366;
-            cursor: pointer;
-            width: 80%;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        .button:hover {
-            background-color: #003366;
-            color: #ffcc00;
-            transform: translateY(-3px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-        }
-
-        .video-section, .popular-downloads {
-            background-color: white;
-            padding: 20px;
-            margin: 20px auto;
-            width: 80%;
-            max-width: 800px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .video-section h2, .popular-downloads h2 {
-            color: #003366;
-            margin-bottom: 15px;
-        }
-
-        .video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-
-        .video-item iframe {
-            width: 100%;
-            height: 200px;
-            border-radius: 8px;
-            border: none;
-        }
-
-        .popular-downloads ul {
+        .file-list ul {
             list-style-type: none;
             padding: 0;
         }
-
-        .popular-downloads li {
+        .file-list li {
             margin: 10px 0;
         }
-
-        footer {
-            background-color: #003366;
-            color: white;
-            padding: 20px;
-            font-size: 1em;
-        }
-
-        .home-button {
-            color: white;
+        .file-list a {
             text-decoration: none;
-            background-color: #003366;
-            padding: 10px 20px;
-            border-radius: 5px;
-        }
-
-        @media (max-width: 768px) {
-            .button-container {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-
-        @media (max-width: 480px) {
-            .button-container {
-                grid-template-columns: 1fr;
-            }
+            color: #003366;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
 
-    <div class="main-title">
-        الرياضيات السهلة
+    <div class="upload-form">
+        <h1>رفع الملفات</h1>
+        <select id="year">
+            <option value="first-year">السنة أولى متوسط</option>
+            <option value="second-year">السنة ثانية متوسط</option>
+            <option value="third-year">السنة ثالثة متوسط</option>
+            <option value="fourth-year">السنة رابعة متوسط</option>
+        </select>
+        <select id="fileType">
+            <option value="assignments">فروض</option>
+            <option value="lessons">دروس</option>
+            <option value="tests">اختبارات</option>
+        </select>
+        <input type="file" id="fileInput">
+        <button onclick="uploadFile()">رفع الملف</button>
+        <p id="status"></p>
     </div>
 
-    <div class="search-bar">
-        <input type="text" placeholder="ابحث عن درس أو تمرين...">
-        <button><i class="fas fa-search"></i> بحث</button>
+    <div class="file-list">
+        <h2>الملفات المرفوعة</h2>
+        <ul id="filesList"></ul>
     </div>
 
-    <div class="button-container">
-        <a href="first-year.html" class="button"><i class="fas fa-calendar-alt"></i> السنة أولى متوسط</a>
-        <a href="second-year.html" class="button"><i class="fas fa-puzzle-piece"></i> السنة ثانية متوسط</a>
-        <a href="third-year.html" class="button"><i class="fas fa-chalkboard-teacher"></i> السنة ثالثة متوسط</a>
-        <a href="fourth-year.html" class="button"><i class="fas fa-book"></i> السنة رابعة متوسط</a>
-        <a href="teacher-documents.html" class="button"><i class="fas fa-chalkboard"></i> وثائق الأستاذ</a>
-        <a href="upload.html" class="button"><i class="fas fa-upload"></i> رفع الملفات</a>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script>
+        // تهيئة Supabase
+        const supabaseUrl = 'https://metaecgrnzfmvczbuyvt.supabase.co';
+        const supabaseKey = 'YOUR_JWT_TOKEN'; // استبدل هذا بالـ JWT Token
+        const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-    <div class="video-section">
-        <h2>فيديوهات تفاعلية</h2>
-        <div class="video-grid">
-            <div class="video-item">
-                <iframe src="https://www.youtube.com/embed/BXc936XjzpU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="video-item">
-                <iframe src="https://www.youtube.com/embed/G-4JB9Li74g" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="video-item">
-                <iframe src="https://www.youtube.com/embed/MUNuJz3hagQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="video-item">
-                <iframe src="https://www.youtube.com/embed/ilb7iZjaMlc" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
-    </div>
+        // رفع الملفات
+        async function uploadFile() {
+            const fileInput = document.getElementById('fileInput');
+            const year = document.getElementById('year').value;
+            const fileType = document.getElementById('fileType').value;
+            const status = document.getElementById('status');
 
-    <div class="popular-downloads">
-        <h2>التحميلات الشائعة</h2>
-        <ul>
-            <li><a href="#">حلول تمارين الفصل الأول</a></li>
-            <li><a href="#">نماذج اختبارات السنة الرابعة</a></li>
-        </ul>
-    </div>
+            if (fileInput.files.length === 0) {
+                status.textContent = "الرجاء اختيار ملف أولاً.";
+                return;
+            }
 
-    <footer>
-        <a href="index.html" class="home-button">الرئيسية</a>
-        <p>&copy; 2025 الرياضيات السهلة - جميع الحقوق محفوظة</p>
-    </footer>
+            const file = fileInput.files[0];
+            const filePath = `${year}/${fileType}/${file.name}`;
+
+            const { data, error } = await supabase
+                .storage
+                .from('uploads') // اسم الـ Bucket
+                .upload(filePath, file); // المسار والملف
+
+            if (error) {
+                status.textContent = "حدث خطأ أثناء رفع الملف: " + error.message;
+            } else {
+                status.textContent = "تم رفع الملف بنجاح!";
+                listFiles(); // تحديث قائمة الملفات بعد الرفع
+            }
+        }
+
+        // عرض الملفات
+        async function listFiles() {
+            const year = document.getElementById('year').value;
+            const fileType = document.getElementById('fileType').value;
+            const filesList = document.getElementById('filesList');
+
+            const { data, error } = await supabase
+                .storage
+                .from('uploads') // اسم الـ Bucket
+                .list(`${year}/${fileType}`); // المسار
+
+            if (error) {
+                console.error('حدث خطأ أثناء استرداد الملفات:', error);
+            } else {
+                filesList.innerHTML = ""; // مسح القائمة الحالية
+                data.forEach(file => {
+                    const listItem = document.createElement("li");
+                    listItem.innerHTML = `<a href="#" onclick="downloadFile('${year}/${fileType}/${file.name}')">${file.name}</a>`;
+                    filesList.appendChild(listItem);
+                });
+            }
+        }
+
+        // تنزيل الملفات
+        async function downloadFile(filePath) {
+            const { data, error } = await supabase
+                .storage
+                .from('uploads') // اسم الـ Bucket
+                .download(filePath); // المسار الكامل للملف
+
+            if (error) {
+                console.error('حدث خطأ أثناء تنزيل الملف:', error);
+            } else {
+                const url = URL.createObjectURL(data);
+                window.open(url); // فتح الملف في نافذة جديدة
+            }
+        }
+
+        // تحميل قائمة الملفات عند فتح الصفحة
+        listFiles();
+    </script>
 
 </body>
 </html>
